--- a/site/css/style.css
+++ b/site/css/style.css
@@ -4,3 +4,20 @@ body {
     overflow: hidden;
     background-color: #151515;
 }
+
+#loading-screen {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+.vertical-center {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+}
