--- a/site/view/game.html
+++ b/site/view/game.html
@@ -5,7 +5,7 @@
     <title>Ephemeris</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script data-main="app" src="js/lib/require.js"></script>
+    <script data-main="js/app" src="js/lib/require.js"></script>
   </head>
   <body>
     <div id="loading-screen" class="jumbotron vertical-center">
