--- a/site/view/game.html
+++ b/site/view/game.html
@@ -18,6 +18,11 @@
         </div>
       </div>
     </div>
+    <div id="game-over" class="jumbotron vertical-center hidden">
+      <div class="container">
+        <h1></h1>
+      </div>
+    </div>
     <div id="phaser-container">
       <div id="phaser-body"></div>
     </div>
