--- a/site/view/newgame.html
+++ b/site/view/newgame.html
@@ -22,6 +22,10 @@
                 <input name="username" type="text" class="form-control" placeholder="Username">
               </div>
               <div class="form-group">
+                <label>Game Name</label>
+                <input name="gamename" type="text" class="form-control" placeholder="Game Name">
+              </div>
+              <div class="form-group">
                 <label>Map</label>
                 <select name="map" class="form-control">
                   <option>1</option>
