--- a/site/view/game.html
+++ b/site/view/game.html
@@ -21,6 +21,14 @@
     <div id="game-over" class="jumbotron vertical-center hidden">
       <div class="container">
         <h1></h1>
+        <button id="download-replay" class="btn btn-primary">Download Replay</button>
+      </div>
+    </div>
+    <div id="paused" class="jumbotron vertical-center hidden">
+      <div class="container">
+        <h1>Surrender?</h1>
+        <button id="paused-continue" class="btn btn-primary">Continue</button>
+        <button id="paused-forfeit" class="btn btn-danger">Forfeit</button>
       </div>
     </div>
     <div id="phaser-container">
