--- a/site/view/game.html
+++ b/site/view/game.html
@@ -31,8 +31,13 @@
         <button id="paused-forfeit" class="btn btn-danger">Forfeit</button>
       </div>
     </div>
+    <div id="notification-box" class="hidden">
+      <ul id="notification-text"></ul>
+    </div>
+    <input type="text" id="chat-input" class="hidden" type="submit">
     <div id="phaser-container">
-      <div id="phaser-body"></div>
+      <div id="phaser-body">
+      </div>
     </div>
   </body>
 </html>
