--- a/site/view/lobby.html
+++ b/site/view/lobby.html
@@ -4,28 +4,28 @@
     <meta charset="utf-8" />
     <title>Ephemeris: Join a game</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/lobby.css">
     <script src="js/lib/jquery.js"></script>
-    <style>
-     tr {
-       cursor: pointer;
-     }
-     .table tbody tr:hover td, .table tbody tr:hover th {
-       background-color: #eeeeea;
-     }
-    </style>
   </head>
   <body>
     <div class="container">
+      <div class="row col-sm-offset-4 col-sm-4">
+        <h1>Lobby</h1>
+      </div>
       <div class="row col-sm-offset-2 col-sm-8">
         <table class="table">
           <tr>
+            <th>Number</th>
             <th>Name</th>
             <th>Map</th>
             <th>Players</th>
           </tr>
+          <% var count=0 %>
           <% for(var id in games) {%>
           <% if (games[id].length > 0 && games[id].length < 2){%>
+          <% ++count %>
           <tr gameid="<%= id %>">
+            <td><%= count %></td>
             <td><%= games[id].gamename %></td>
             <td><%= games[id].mapName %></td>
             <td><%= games[id].length + "/2" %></td>
@@ -36,8 +36,8 @@
     </div>
   </body>
   <script>
-   $("tr").click(function(){
-     var id = $(this).attr("gameid");
+   $("tr td").click(function(){
+     var id = $(this).parent().attr("gameid");
      document.location.href = '/game?id=' + id;
    });
   </script>
