--- a/site/css/lobby.css
+++ b/site/css/lobby.css
@@ -5,6 +5,10 @@ body {
     background-position: center;
 }
 
+.container {
+    margin-top: 75px;
+}
+
 tr {
     color: white;
 }
@@ -28,4 +32,14 @@ h1 {
     text-align: center;
     color: white;
     font-size: 100px;
+}
+
+#overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    z-index: 99;
 }
