--- a/site/css/newgame.css
+++ b/site/css/newgame.css
@@ -11,6 +11,14 @@ h1 {
     font-size: 100px;
 }
 
+.container {
+    margin-top: 75px;
+}
+
+.btn{
+    background: rgba(122, 130, 136, 0.7) !important;
+}
+
 .panel-transparent {
     background: none;
 }
@@ -29,4 +37,14 @@ h1 {
 
 .panel-transparent input[type=file] {
     color: white;
+}
+
+#overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    z-index: 99;
 }
