--- a/site/view/index.html
+++ b/site/view/index.html
@@ -1,57 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ephemeris</title>
-
-    <!-- Bootstrap -->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">-->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <style>
-	.jumbotron {
-            background-color: transparent;
-            text-align: center;
-            color: white;
-        }
-        h1 {
-        text-align: center;
-        }
-        body {
-        background-image: url(../assets/images/star-background.jpg) ;
-        background-size: cover;
-        }
-    </style>
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/index.css" rel="stylesheet">
+    <script src="js/lib/jquery.js"></script>
   </head>
   <body>
-    <!--star-wars-space-background.jpg-->
-    <!--http://juliewight.com/star-wars-space-background-2/-->
+    <div id="overlay"></div>
     <div class="container">
-        <div class="jumbotron">
-            <h1>Ephemeris</h1>
-                <div class="btn-group" role="group" aria-label"...">
-
+      <h1>Ephemeris</h1>
+      <div id="buttons">
+        <div class="row col-sm-4 col-sm-offset-4">
+          <a class="btn btn-lg btn-primary" href="/newgame">New Game</a>
+          <a class="btn btn-lg btn-primary" href="/lobby">Join Game</a>
+        </div>
+        <div id="tutorial" class="row col-sm-2 col-sm-offset-5">
+          <a class="btn btn-lg btn-warning" href="/tutorial">Tutorial</a>
+        </div>
+      </div>
     </div>
-    </div>
-<div class="container">
-        <div class="jumbotron">
-            
-                    <a class="btn btn-large btn-info" href="lobby.html">Host Game</a>
-                    <a class="btn btn-large btn-info" href="newgame.html">Join Game</a>
-    
-    </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <audio id="background-music" autoplay loop volume=0>
+      <source src="assets/sounds/background.mp3" type="audio/mp3">
+      Your browser does not support the audio element.
+    </audio>
+    <script>
+     $("audio")[0].volume = 0.1;
+      $("a").click(function(e){
+          var link = $(this);
+          e.preventDefault();
+          $("#background-music").animate({
+              volume: 0
+          }, 500, function(){
+              console.log(e, link);
+              window.location.href = link[0].href;
+          });
+          $("#overlay").fadeIn();
+      })
+    </script>
   </body>
 </html>
