--- a/site/view/newgame.html
+++ b/site/view/newgame.html
@@ -8,6 +8,7 @@
     <script src="js/lib/jquery.js"></script>
   </head>
   <body>
+    <div id="overlay"></div>
     <div class="container">
       <div class="row col-sm-12">
         <h1>New Game</h1>
@@ -57,8 +58,14 @@
         </div>
       </form>
     </div>
+    <audio id="background-music" autoplay loop volume="0.1">
+      <source src="assets/sounds/background.mp3" type="audio/mp3">
+      Your browser does not support the audio element.
+    </audio>
   </body>
   <script>
+   $("audio")[0].volume = 0.1;
+   $("#overlay").fadeOut();
    $("input:radio").change(function(){
      $("fieldset").prop("disabled", function(i, val){
        return !val;
