Add symmetric map

--- a/site/view/newgame.html
+++ b/site/view/newgame.html
@@ -30,7 +30,8 @@
               <div class="form-group">
                 <label>Map</label>
                 <select name="map" class="form-control">
-                  <option>1</option>
+                  <option>Asymmetric</option>
+                  <option>Symmetric</option>
                 </select>
               </div>
             </div>
